--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -244,6 +244,7 @@ deny 179.43.182.58;
 deny 180.150.226.99;
 deny 185.100.85.132;
 deny 185.100.85.24;
+deny 185.100.85.25;
 deny 185.100.87.136;
 deny 185.100.87.166;
 deny 185.100.87.174;
@@ -263,7 +264,6 @@ deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
-deny 185.126.114.110;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -278,6 +278,7 @@ deny 185.129.61.9;
 deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
+deny 185.132.53.150;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -299,6 +300,7 @@ deny 185.196.220.38;
 deny 185.196.220.39;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
@@ -377,11 +379,13 @@ deny 185.220.101.22;
 deny 185.220.101.23;
 deny 185.220.101.24;
 deny 185.220.101.25;
+deny 185.220.101.26;
 deny 185.220.101.27;
 deny 185.220.101.28;
 deny 185.220.101.29;
 deny 185.220.101.3;
 deny 185.220.101.30;
+deny 185.220.101.31;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -390,6 +394,7 @@ deny 185.220.101.36;
 deny 185.220.101.37;
 deny 185.220.101.38;
 deny 185.220.101.39;
+deny 185.220.101.4;
 deny 185.220.101.40;
 deny 185.220.101.41;
 deny 185.220.101.42;
@@ -583,8 +588,19 @@ deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
+deny 195.47.238.176;
+deny 195.47.238.177;
+deny 195.47.238.178;
+deny 195.47.238.82;
+deny 195.47.238.83;
+deny 195.47.238.84;
+deny 195.47.238.86;
+deny 195.47.238.87;
+deny 195.47.238.88;
 deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.47.238.92;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
@@ -901,7 +917,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -910,7 +925,8 @@ deny 23.191.200.24;
 deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
-deny 23.191.200.28;
+deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
@@ -1242,6 +1258,7 @@ deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
+deny 2a06:1700:0:12::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -1267,6 +1284,7 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -1360,6 +1378,7 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
@@ -1369,6 +1388,8 @@ deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -1391,7 +1412,17 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
+deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
@@ -1836,12 +1867,6 @@ deny 91.202.5.104;
 deny 91.203.144.194;
 deny 91.203.145.116;
 deny 91.206.26.26;
-deny 91.208.75.153;
-deny 91.208.75.156;
-deny 91.208.75.178;
-deny 91.208.75.239;
-deny 91.208.75.3;
-deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.237.39;
 deny 91.227.114.153;
