--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -438,6 +438,7 @@ deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
 deny 2a06:1700:0:12::3;
+deny 2a06:1700:0:12::4;
 deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
@@ -463,6 +464,7 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:2000:cd4c::12;
 deny 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 deny 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -556,6 +558,7 @@ deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
+deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
@@ -565,6 +568,8 @@ deny 2a0b:f4c2::28;
 deny 2a0b:f4c2::29;
 deny 2a0b:f4c2::3;
 deny 2a0b:f4c2::30;
+deny 2a0b:f4c2::31;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -587,7 +592,17 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:4d00:2:8::2;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
+deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:9a40:8860:51::aa11;
