--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -244,6 +244,7 @@ set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.24;
+set_real_ip_from 185.100.85.25;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
@@ -263,7 +264,6 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.120.16.171;
 set_real_ip_from 185.120.16.176;
-set_real_ip_from 185.126.114.110;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -278,6 +278,7 @@ set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.132.53.150;
 set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
@@ -299,6 +300,7 @@ set_real_ip_from 185.196.220.38;
 set_real_ip_from 185.196.220.39;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
+set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
@@ -377,11 +379,13 @@ set_real_ip_from 185.220.101.22;
 set_real_ip_from 185.220.101.23;
 set_real_ip_from 185.220.101.24;
 set_real_ip_from 185.220.101.25;
+set_real_ip_from 185.220.101.26;
 set_real_ip_from 185.220.101.27;
 set_real_ip_from 185.220.101.28;
 set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
 set_real_ip_from 185.220.101.30;
+set_real_ip_from 185.220.101.31;
 set_real_ip_from 185.220.101.32;
 set_real_ip_from 185.220.101.33;
 set_real_ip_from 185.220.101.34;
@@ -390,6 +394,7 @@ set_real_ip_from 185.220.101.36;
 set_real_ip_from 185.220.101.37;
 set_real_ip_from 185.220.101.38;
 set_real_ip_from 185.220.101.39;
+set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
 set_real_ip_from 185.220.101.42;
@@ -583,8 +588,19 @@ set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
+set_real_ip_from 195.47.238.176;
+set_real_ip_from 195.47.238.177;
+set_real_ip_from 195.47.238.178;
+set_real_ip_from 195.47.238.82;
+set_real_ip_from 195.47.238.83;
+set_real_ip_from 195.47.238.84;
+set_real_ip_from 195.47.238.86;
+set_real_ip_from 195.47.238.87;
+set_real_ip_from 195.47.238.88;
 set_real_ip_from 195.47.238.90;
+set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.47.238.92;
+set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
@@ -901,7 +917,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -910,7 +925,8 @@ set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
@@ -1242,6 +1258,7 @@ set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
 set_real_ip_from 2a06:1700:0:12::3;
+set_real_ip_from 2a06:1700:0:12::4;
 set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
@@ -1267,6 +1284,7 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:2000:cd4c::12;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c1:12a1:58f9:e7ff:fe0b:b0f1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -1360,6 +1378,7 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
+set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
@@ -1369,6 +1388,8 @@ set_real_ip_from 2a0b:f4c2::28;
 set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
+set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
@@ -1391,7 +1412,17 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:4d00:2:8::2;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
+set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
+set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:9a40:8860:51::aa11;
@@ -1836,12 +1867,6 @@ set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
-set_real_ip_from 91.208.75.153;
-set_real_ip_from 91.208.75.156;
-set_real_ip_from 91.208.75.178;
-set_real_ip_from 91.208.75.239;
-set_real_ip_from 91.208.75.3;
-set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
