--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -924,13 +924,11 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
+allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
-allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -1167,7 +1165,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1236,6 +1233,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1736,6 +1734,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1800,7 +1799,6 @@ allow 77.48.28.204;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.85.151.105;
 allow 78.142.18.219;
 allow 78.153.150.25;
 allow 78.159.131.103;
@@ -1843,7 +1841,6 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
-allow 87.120.254.132;
 allow 87.121.79.9;
 allow 88.151.192.2;
 allow 88.151.194.24;
@@ -1867,6 +1864,12 @@ allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
+allow 91.208.75.153;
+allow 91.208.75.156;
+allow 91.208.75.178;
+allow 91.208.75.239;
+allow 91.208.75.3;
+allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
 allow 91.227.114.153;
