--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,8 +1,6 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
-allow 102.211.56.12;
-allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -201,7 +199,6 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.65.134.4;
 allow 176.65.148.133;
 allow 176.65.148.3;
@@ -906,6 +903,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.190.216.8;
 allow 23.191.200.10;
@@ -918,7 +916,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -926,12 +923,9 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.29;
 allow 23.191.200.3;
-allow 23.191.200.30;
 allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -962,6 +956,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -1581,8 +1576,6 @@ allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2c0f:6c0:0:2::6983;
-allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
