--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -142,6 +142,7 @@ allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::2000:34ff:fe4d:7faf;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
@@ -760,5 +761,3 @@ allow 2a12:bec4:1821:3a8::a;
 allow 2a12:de40:21:1be4::;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
-allow 2c0f:6c0:0:2::6983;
-allow 2c0f:6c0:0:d::d28b;
