--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -142,6 +142,7 @@ deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::2000:34ff:fe4d:7faf;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
@@ -760,5 +761,3 @@ deny 2a12:bec4:1821:3a8::a;
 deny 2a12:de40:21:1be4::;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
-deny 2c0f:6c0:0:2::6983;
-deny 2c0f:6c0:0:d::d28b;
